Styling updates to stop line wrapping on code blocks

--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -466,3 +466,8 @@ img::-moz-selection {
 body {
 	webkit-tap-highlight-color: @brand-primary;
 }
+
+
+.highlight pre code {
+  display: inline-block;
+}
